adding admin functionality

--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,7 +1,6 @@
 <div class="ui container">
   <h2 class="ui blue header">
     {{ selectedMovie?.title }}
-    <!--<div class="sub header">{{ selectedMovie?.title }}</div>-->
   </h2>
 
   <div class="ui floating message" id="main" >
@@ -11,39 +10,33 @@
       </div>
       <div class="sixteen wide mobile eight wide tablet twelve wide computer column">
         <div class="ui sub header">
-          <span *ngIf="language == 'pl'">Genres</span>
-          <span *ngIf="language != 'pl'">Genres</span>
+          <span>Genres</span>
         </div>
         <div class="ui centered grid">
           <div  class="sixteen wide mobile sixteen wide tablet sixteen wide computer column">
             {{ selectedMovie?.genres }}
-            <!--<i *ngFor="let genre of selectedMovie?.genres" class="ui orange label">{{ genre.name }}</i>-->
           </div>
           <div  class="sixteen wide mobile sixteen wide tablet sixteen wide computer column">
             <div class="ui sub header">
-              <span *ngIf="language == 'pl'">Opis</span>
-              <span *ngIf="language != 'pl'">Overview</span>
+              <span>Overview</span>
             </div>
             {{ selectedMovie?.storyline }}
           </div>
           <div  class="sixteen wide mobile sixteen wide tablet sixteen wide computer column">
             <div class="ui sub header">
-              <span *ngIf="language == 'pl'">Original Title</span>
-              <span *ngIf="language != 'pl'">Original Title</span>
+              <span>Original Title</span>
             </div>
             {{ selectedMovie?.originalTitle }}
           </div>
           <div  class="sixteen wide mobile sixteen wide tablet sixteen wide computer column">
             <div class="ui sub header">
-              <span *ngIf="language == 'pl'">Duration</span>
-              <span *ngIf="language != 'pl'">Duration</span>
+              <span>Duration</span>
             </div>
             {{ selectedMovie?.duration }}
           </div>
           <div  class="sixteen wide mobile sixteen wide tablet sixteen wide computer column">
             <div class="ui sub header">
-              <span *ngIf="language == 'pl'">Ocena</span>
-              <span *ngIf="language != 'pl'">Vote average</span>
+              <span>Vote average</span>
             </div>
             <div class="ui blue statistic">
               <div class="text value">{{ selectedMovie?.imdbRating }}</div>
@@ -52,8 +45,7 @@
 
           <div  class="sixteen wide mobile sixteen wide tablet sixteen wide computer column">
             <div class="ui sub header">
-              <span *ngIf="language == 'pl'">Data publikacji</span>
-              <span *ngIf="language != 'pl'">Release date</span></div>
+              <span>Release date</span></div>
             <div class="ui blue statistic">
               <div class="text value">{{ selectedMovie?.releaseDate }}</div>
             </div>
@@ -68,8 +60,7 @@
           <i class="left arrow icon"></i>
         </div>
         <div class="hidden content">
-          <span *ngIf="language == 'pl'">Wróć</span>
-          <span *ngIf="language != 'pl'">Back</span>
+          <span>Back</span>
         </div>
       </div>
     </div>
@@ -82,18 +73,24 @@
       Rating:
       <div class="ui big fluid action input">
 
-        <input #rating type="number" max="10" min="1" required/><br></div></div><br><br>
+        <input #rating pattern="[1-9]|10" title="Error: 10 digits are required." type="number" max="10" min="1" required/><br></div></div><br><br>
 <div class="ui container">
   Comment:
   <div class="ui big fluid action input">
 <input #comment
        type="text"
-       (keyup.enter)="addComment(comment, rating)"><br>
+       (keyup.enter)="addComment(comment.value, rating.value)"><br>
 
     <div class="ui  grid">
       <br><br></div></div><br>
       <div class="computer only tablet only row">
-        <button class="ui big blue right labeled icon button" type="submit" (click)="addComment(comment, ratings)">
-          <span *ngIf="language != 'pl'">Add Comment</span>
+        <button class="ui big blue right labeled icon button" type="submit" (click)="addComment(comment.value, rating.value)">
+          <span>Add Comment</span>
         </button>
   </div></div></form></div>
+
+<div class="ui floating message" id="comments" *ngFor="let input of selectedMovie?.userInput">
+  <h2 class="ui blue header">
+  {{input?.user}}
+  </h2>
+</div>
