--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,67 +1,69 @@
-<app-search></app-search>-
+<app-search></app-search>
 <div class="ui container">
   <div class="ui grid">
-
     <div class="middle aligned sixteen wide mobile eight wide tablet eight wide computer column">
       <div class="ui large breadcrumb">
         <div class="active section">
           <span class="ui blue header">
-            <span *ngIf="language == 'pl'">Popularne filmy</span>
-            <span *ngIf="language != 'pl'">Popular movies</span>
+            <span>Popular movies</span>
           </span>
         </div>
       </div>
     </div>
-
     <div class="right aligned middle aligned sixteen wide mobile eight wide tablet eight wide computer column">
       <div class="ui text compact menu">
         <div class="header item">
-          <span *ngIf="language == 'pl'">Sortuj wg</span>
-          <span *ngIf="language != 'pl'">Sort by</span>
-          </div>
+          <span>Sort by</span>
+        </div>
         <a class="item" (click)="sortMovies('title')">
           <i class="font icon"></i>
-          <span *ngIf="language == 'pl'">Tytuł</span>
-          <span *ngIf="language != 'pl'">Title</span>
+          <span>Title</span>
         </a>
         <a class="item" (click)="sortMovies('popularity')">
           <i class="empty star icon"></i>
-          <span *ngIf="language == 'pl'">Popularność</span>
-          <span *ngIf="language != 'pl'">Popularity</span>
+          <span>Popularity</span>
         </a>
       </div>
     </div>
   </div>
-  <div class="ui link five doubling cards">
-    <div class="card" *ngFor="let movie of movies| async;let indexOfelement=index " [routerLink]="['/movie/'+indexOfelement]" routerLinkActive="active">
-      <div class="image">
-        <img *ngIf="movie?.posterurl" class="ui fluid image" src="{{ movie?.posterurl }}">
-        <!--<img *ngIf="movie.posterurl" class="ui middle aligned tiny image" src="${{movie.posterurl}}">
-        <img *ngIf="!movie.posterurl" class="ui middle aligned tiny image" src="${{movie.posterurl}}">-->
-      </div>
-      <div class="content">
-        <div class="header">
-            {{ movie.title }}
+    <div *ngFor="let movie of movies;">
+      <div class="ui link five doubling cards" >
+      <div class="card" [routerLink]="['/movie/'+movie?.title]" routerLinkActive="active">
+        <div class="image">
+          <img *ngIf="movie?.posterurl" class="ui fluid image" src="{{ movie?.posterurl }}">
         </div>
-        <div class="description">
-          <span *ngIf="language == 'pl'">Popularność</span>
-          <span *ngIf="language != 'pl'">Popularity</span>
-          : {{ movie.imdbRating  | number : '1.0-1' }}
-          <br>
-          <span *ngIf="language == 'pl'">Original Title</span>
-          <span *ngIf="language != 'pl'">Original Title</span>
-          : {{ movie.originalTitle }}
+        <div class="content">
+          <div class="header">
+            {{ movie.title}}
+          </div>
+          <div class="description">
+            <span>Popularity</span>
+            : {{ movie.imdbRating  | number : '1.0-1' }}
+            <br>
+            <span>Original Title</span>
+            : {{ movie.originalTitle }}
+          </div>
         </div>
-      </div>
-      <div class="extra content">
+        <div class="extra content">
         <span class="right floated">
           <h3>
             <i class="star icon"></i>
             {{ movie.imdbRating }}
           </h3>
         </span>
-        {{ movie.releaseDate }}
+          {{ movie.releaseDate }}
+        </div>
       </div>
-    </div>
+      </div>
+      <br>
+      <div class="computer only tablet only row">
+        <button class="ui big blue right labeled icon button" type="submit" (click)="deleteMovie(movie.title);">Delete</button>
+      </div><br>
+      <div class="computer only tablet only row">
+        <button class="ui big blue right labeled icon button" type="submit" (click)="editMovie(movie.title);">Edit</button>
+      </div>
+
+
+
   </div>
 </div>
