--- a/src/app/search/search-movies.component.html
+++ b/src/app/search/search-movies.component.html
@@ -3,15 +3,13 @@
     <div class="middle aligned sixteen wide mobile eight wide tablet eight wide computer column">
       <div class="ui large breadcrumb">
         <a class="section" routerLink="/home" routerLinkActive="active">
-          <span *ngIf="language == 'pl'">Strona główna</span>
-          <span *ngIf="language != 'pl'">Home</span>
+          <span>Home</span>
         </a>
         <i class="right angle icon divider"></i>
         <div class="active section">
             <i class="search icon"></i>
             {{ total_results }}
-            <span *ngIf="language == 'pl'">wyników wyszukiwania dla </span>
-            <span *ngIf="language != 'pl'">search results for </span>
+            <span>search results for </span>
             <span class="ui blue header"> {{ query }}</span>
         </div>
       </div>
@@ -20,18 +18,15 @@
     <div class="right aligned middle aligned sixteen wide mobile eight wide tablet eight wide computer column">
       <div class="ui text compact menu">
         <div class="header item">
-          <span *ngIf="language == 'pl'">Sortuj wg</span>
-          <span *ngIf="language != 'pl'">Sort by</span>
+          <span>Sort by</span>
         </div>
         <a class="item" (click)="sortMovies('title')">
           <i class="font icon"></i>
-          <span *ngIf="language == 'pl'">Tytuł</span>
-          <span *ngIf="language != 'pl'">Title</span>
+          <span>Title</span>
         </a>
         <a class="item" (click)="sortMovies('popularity')">
           <i class="empty star icon"></i>
-          <span *ngIf="language == 'pl'">Popularność</span>
-          <span *ngIf="language != 'pl'">Popularity</span>
+          <span>Popularity</span>
         </a>
       </div>
     </div>
@@ -49,12 +44,10 @@
         </div>
 
         <div class="description">
-          <span *ngIf="language == 'pl'">Popularność</span>
-          <span *ngIf="language != 'pl'">Popularity</span>
+          <span>Popularity</span>
           : {{ movie.popularity  | number : '1.0-1' }}
           <br>
-          <span *ngIf="language == 'pl'">Liczba głosów</span>
-          <span *ngIf="language != 'pl'">Vote count</span>
+          <span>Vote count</span>
           : {{ movie.vote_count }}
         </div>
       </div>
@@ -78,8 +71,7 @@
     <div class="computer only tablet only column">
       <button [disabled]="page == 1" class="ui fluid blue labeled icon button" (click)="goPage(-1)">
         <i class="left chevron icon"></i>
-        <span *ngIf="language == 'pl'">Poprzednie</span>
-        <span *ngIf="language != 'pl'">Previous</span>
+        <span>Previous</span>
       </button>
     </div>
 
@@ -101,8 +93,7 @@
     <!-- prev -->
     <div class="computer only tablet only column">
       <button [disabled]="page == total_pages" class="ui fluid blue right labeled icon button" (click)="goPage(1)">
-        <span *ngIf="language == 'pl'">Następne</span>
-        <span *ngIf="language != 'pl'">Next</span>
+        <span>Next</span>
         <i class="right chevron icon"></i>
       </button>
     </div>
