--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -14,8 +14,7 @@
         <div class="computer only tablet only row">
           <button class="ui big blue right labeled icon button" type="submit" (click)="search(inputSearch.value)">
             <i class="search icon"></i>
-            <span *ngIf="language == 'pl'">Szukaj</span>
-            <span *ngIf="language != 'pl'">Search</span>
+            <span>Search</span>
           </button>
         </div>
         <div class="mobile only row">
@@ -23,7 +22,12 @@
             <i class="search icon"></i>
           </button>
         </div>
+      </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <div class="computer only tablet only row">
+        <button class="ui big blue right labeled icon button" type="submit" (click)="addMovie();">Add</button>
       </div>
     </div>
+
   </div>
+
 </div>
