added search functionality

--- a/src/app/addEdit/addEdit.component.html
+++ b/src/app/addEdit/addEdit.component.html
@@ -1,54 +1,56 @@
 <div class="ui floating message" id="register">
-  <div class="ui container">
-    <div class="ui big fluid action input">
-      Title :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <div class="ui big container">
+    Title :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <div class="ui fluid action input">
       <input #title type="text"><br>
     </div>
   </div><br><br>
   <div class="ui container">
-    <div class="ui big fluid action input">
-      Genres :&nbsp;&nbsp;
+    Genres :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <div class="ui fluid action input">
       <input #genres type="text"><br>
     </div>
   </div><br><br>
   <div class="ui container">
-    <div class="ui big fluid action input">
-      Duration :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Duration :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <div class="ui fluid action input">
       <input #duration type="text"><br>
     </div>
   </div><br><br>
   <div class="ui container">
-    <div class="ui big fluid action input">
-      Release Date :&nbsp;&nbsp;
+    Release Date :&nbsp;&nbsp;
+    <div class="ui fluid action input">
       <input #releaseDate type="text"><br>
     </div>
   </div><br><br>
   <div class="ui container">
-    <div class="ui big fluid action input">
-      Original Title :&nbsp;
+    Original Title :&nbsp;
+    <div class="ui fluid action input">
       <input #originalTitle type="text"><br>
     </div>
   </div><br><br>
   <div class="ui container">
-    <div class="ui big fluid action input">
-      Storyline :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Storyline :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <div class="ui fluid action input">
       <input #storyline type="text"><br>
     </div>
   </div><br><br>
   <div class="ui container">
-    <div class="ui big fluid action input">
-      imdb Rating :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    IMDB Rating :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <div class="ui fluid action input">
       <input #imdbRating type="text"><br>
     </div>
   </div><br><br>
   <div class="ui container">
-    <div class="ui big fluid action input">
-      Poster url :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Poster url :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <div class="ui fluid action input">
       <input #posterurl type="text"><br>
     </div>
   </div><br><br>
   <div class="ui container">
   <div class="ui  grid">
   <div class="computer only tablet only row">
-    <button class="ui big blue right labeled icon button" type="submit" (click)="addMovie()">Submit</button>
-  </div></div></div>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button class="ui big blue right labeled icon button" type="submit" (click)="addMovie()">Submit</button>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button class="ui big blue right labeled icon button" type="submit" (click)="back()">Back</button>
+
+  </div></div></div></div>
