--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="ui blue inverted borderless stackable menu">
-  <a class="header item"  routerLink="/login" >
-    <i class="video icon"></i> {{ title }}
-  </a>
-
-
+  <h1 style="width:500%;height:10%;text-align:center;position:relative;top:40%;">
+  <a class="item" routerLink="/login" >
+    Movies Application
+  </a></h1>
 </div>
+
