--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,37 +1,40 @@
 <div class="ui floating message" id="register">
   <div class="ui container">
-    <div class="ui big fluid action input">
-      Name :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Name :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <div class="ui fluid action input">
+
       <input #name type="text"><br>
     </div>
   </div><br><br>
   <div class="ui container">
-    <div class="ui big fluid action input">
-      Username :&nbsp;&nbsp;
+    Username :&nbsp;&nbsp;
+    <div class="ui fluid action input">
       <input #uname type="text"><br>
     </div>
   </div><br><br>
   <div class="ui container">
-    <div class="ui big fluid action input">
-      Email :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    Email :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <div class="ui fluid action input">
       <input #email type="text"><br>
     </div>
   </div><br><br>
   <div class="ui container">
-    <div class="ui big fluid action input">
-      Password :&nbsp;&nbsp;
+    Password :&nbsp;&nbsp;
+    <div class="ui fluid action input">
+
       <input #password type="text"><br>
     </div>
   </div><br><br>
   <div class="ui container">
-    <div class="ui big fluid action input">
-      Confirm Password :&nbsp;
+    Confirm Password :&nbsp;
+    <div class="ui fluid action input">
+
       <input #confirmpassword type="text"><br>
     </div>
   </div><br><br>
   <div class="ui container">
   <div class="ui  grid">
-  <div class="computer only tablet only row">
+  <div class="computer only tablet only row">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button class="ui big blue right labeled icon button" type="submit" (click)="register()">
       <span>Register</span>
     </button></div></div></div>
