--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -34,18 +34,18 @@
             </div>
             {{ selectedMovie?.duration }}
           </div>
-          <div  class="sixteen wide mobile sixteen wide tablet sixteen wide computer column">
+<!--          <div  class="sixteen wide mobile sixteen wide tablet sixteen wide computer column">
             <div class="ui sub header">
-              UserName : </div>
+              <span>UserName : </span></div>
           {{selectedMovie.userInput.user}}<br></div>
           <div  class="sixteen wide mobile sixteen wide tablet sixteen wide computer column">
             <div class="ui sub header">
-              Comment : </div>
+              <span>Comment : </span></div>
           {{selectedMovie.userInput.comment}}<br></div>
           <div  class="sixteen wide mobile sixteen wide tablet sixteen wide computer column">
             <div class="ui sub header">
-              Rating : </div>
-          {{selectedMovie.userInput.rating}}<br></div>
+              <span>Rating : </span></div>
+            {{selectedMovie.userInput.rating}}<br></div>-->
           <div  class="sixteen wide mobile sixteen wide tablet sixteen wide computer column">
             <div class="ui sub header">
               <span>Vote average</span>
@@ -62,6 +62,18 @@
             </div>
           </div>
         </div>
+        <div  class="sixteen wide mobile sixteen wide tablet sixteen wide computer column">
+          <div class="ui sub header">
+            <span>UserName : </span></div>
+          {{selectedMovie.userInput.user}}<br></div>
+        <div  class="sixteen wide mobile sixteen wide tablet sixteen wide computer column">
+          <div class="ui sub header">
+            <span>Comment : </span></div>
+          {{selectedMovie.userInput.comment}}<br></div>
+        <div  class="sixteen wide mobile sixteen wide tablet sixteen wide computer column">
+          <div class="ui sub header">
+            <span>Rating : </span></div>
+          {{selectedMovie.userInput.rating}}<br></div>
       </div>
       </div>
     </div>
